--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -44,7 +44,7 @@
             :global{
                   .question{
                         .q_head{
-                              border-bottom: 1px solid #242424;
+                              border-bottom: 1px solid #2f2f2f;
                         }
                   }
             }
