--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -1,5 +1,5 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
-@import '../../../node_modules/antd/lib/style/themes/index.less';
+@import '../preset/helpers/colorPalette.less';
 
 //antd variables
 @font-size-base: 13px;
