--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -22,8 +22,7 @@
 @text-color: #000;
 @body-background: #f8f9fa;
 @component-background: #ffffff;
-@border-color-split: whitesmoke;
-@border-color-base: whitesmoke;
+@border-color-base: #f5f5f5;
 
 //dark theme varialbles
 // @text-color: #ffffff;
@@ -35,7 +34,6 @@
 // @text-color-secondary: #333333;
 // @body-background: #202124;
 // @border-color-base: #292929;
-// @border-color-split: #292929;
 
 //global variables
 :root {
