--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -1,11 +1,18 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
+@import '../../../node_modules/antd/lib/style/themes/index.less';
 @import '../preset/helpers/colorPalette.less';
 
 //antd variables
-@font-size-base: 13px;
 @primary-color: #f44336;
 @border-radius-base: 6px;
 @border-radius-sm: 6px;
+@shadow-color: rgba(0, 0, 0, 0.05);
+@shadow-1-down: 4px 4px 40px @shadow-color;
+@font-size-base: 13px;
+@success-color: #52c41a;
+@warning-color: #faad14;
+@error-color: #f5222d;
+@hover-color: #eee;
 
 //custom variables
 @secondary-color: #cb2013;
@@ -23,6 +30,7 @@
 @body-background: #f8f9fa;
 @component-background: #ffffff;
 @border-color-base: #f5f5f5;
+@border-color-split: #f5f5f5;
 
 //dark theme varialbles
 // @text-color: #ffffff;
@@ -34,10 +42,11 @@
 // @text-color-secondary: #333333;
 // @body-background: #202124;
 // @border-color-base: #292929;
+// @border-color-split: #292929;
 
 //global variables
 :root {
-      --hover-color: #eee;
+      --hover-color: @hover-color;
       --primary-color: @primary-color;
       --secondary-color: @secondary-color;
 
