--- a/src/themes/preset/index.less
+++ b/src/themes/preset/index.less
@@ -100,7 +100,7 @@ body {
 }
 
 .ant-modal-mask {
-      background-color: rgba(55, 55, 55, 0.2);
+      background-color: rgba(55, 55, 55, 0.2) !important;
 }
 
 .ant-modal-content {
