--- a/src/themes/preset/index.less
+++ b/src/themes/preset/index.less
@@ -96,6 +96,10 @@ body {
             .ant-menu-submenu-popup {
                   background-color: transparent;
             }
+
+            .ant-modal-confirm-title{
+                  color: @text-color;
+            }
       }
 }
 
