--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -110,10 +110,10 @@
                   animation: show 0.3s ease;
                   padding: 16px 20px;
                   overflow-y: scroll;
-                  box-shadow: 0 2px 10px #eee inset;
+                  border-top: 1px solid whitesmoke;
 
                   &.dark {
-                        box-shadow: 0 2px 10px #222 inset;
+                        border-top: 1px solid #2f2f2f;
                   }
             }
 
