--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -21,7 +21,8 @@
       &.dark {
             background-color: var(--color_background);
             border-bottom: 1px solid #333;
-            :global{
+
+            :global {
                   .ant-back-top {
 
                         .ant-back-top-content {
@@ -123,6 +124,7 @@
 
                         .ant-back-top-icon {
                               margin: 0;
+                              background-size: 100% 100%;
                         }
                   }
             }
