[fix] fix table th style & theme

--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -200,6 +200,7 @@
 
                   th {
                         background-color: #ddd;
+                        white-space: nowrap;
                   }
             }
 
