[fix] fix qa tag style

--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -46,6 +46,12 @@
                         .q_head {
                               border-bottom: 1px solid #2f2f2f;
                         }
+
+                        .q_foot {
+                              .ant-tag {
+                                    background-color: #333;
+                              }
+                        }
                   }
             }
       }
